src/test/fail/return_expected.ly
<@lily
method m():integer { }
m()
@>